# diff2html

./: .coverage  .gitignore  LICENSE.md  README.md  pyproject.toml
diff2html/: diff2html.py
test/: test_e2e.py
test/example/: example.html  foo1  foo2
