[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'diff2html'
version = '1.0'
authors = [
    {'name' = 'tim.pillinger', 'email' = 'tim.pillinger@metoffice.gov.uk'}
]
description = "CLI wrapper for Pythons Difflib builtin"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ['diff', 'html', 'difftool', 'difflib', 'cli']
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = ['pytest', 'flake8']

[project.scripts]
diff2html = "diff2html.diff2html:main"
